# ssl-toolkit

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  go.mod  go.sum  requirements.txt  ssl_checker.py
.github/workflows/: release.yml  update-tap.yml
cmd/ssl-checker/: main.go
cmd/ssl-toolkit/: main.go
config/: default.toml  messages.toml  theme.toml
docs/: architecture.md  checks.md  configuration.md  plan.md  tui-style-guide.md
internal/certificate/: calendar.go  certificate.go  chain.go  display.go  validation.go
internal/dns/: display.go  dns.go
internal/hpkp/: display.go  hpkp.go
internal/utils/: utils.go
internal/web/: server.go
internal/web/handlers/: calendar.go  check.go  download.go  handlers.go
internal/web/templates/: base.go  certificate.go  dns.go  home.go  hpkp.go  result.go  templates.go
src/: error.rs  lib.rs  main.rs  runner.rs
src/cert_ops/: chain_verify.rs  convert.rs  key_match.rs  mod.rs  reader.rs  runner.rs
src/certificate/: calendar.rs  chain.rs  info.rs  mod.rs  security.rs  validation.rs
src/checks/: certificate.rs  dns.rs  mod.rs  ocsp.rs  ssl.rs  tcp.rs  whois.rs
src/cli/: args.rs  interactive.rs  mod.rs
src/commands/: batch.rs  check.rs  ct_search.rs  diff.rs  mod.rs  tlsa.rs  watch.rs
src/config/: messages.rs  mod.rs  settings.rs  theme.rs
src/ct/: mod.rs
src/dns/: geolocation.rs  mod.rs  records.rs  resolver.rs  tlsa.rs
src/export/: html.rs  mod.rs  pdf.rs
src/hpkp/: mod.rs
src/models/: cert_comparison.rs  certificate.rs  dns_result.rs  mod.rs  report_card.rs  ssl_result.rs  test_result.rs
src/output/: banner.rs  cert_chain.rs  grade.rs  html.rs  interactive.rs  json.rs  markdown.rs  mod.rs  pager.rs  results.rs  tables.rs  terminal.rs
src/report/: html.rs  ical.rs  mod.rs  pem.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/widgets/: grade.rs  input.rs  menu.rs  mod.rs  results.rs  save_menu.rs  status.rs
src/utils/: error.rs  mod.rs  progress.rs
templates/: banner.txt  cert_report.html  domain_report.html
tests/: cert_ops_integration.rs  cert_reader.rs  checks_dns.rs  checks_ssl.rs  checks_tcp.rs  cli_args.rs  report_ical.rs  report_pem.rs  test_pdf_logo.rs
tests/fixtures/: ca-cert.pem  ca-key.pem  chain.pem  leaf-cert.pem  leaf-key.pem  test-cert.der  test-cert.pem  test-key.pem  wrong-cert.pem  wrong-key.pem
