[package]
name = "ssl-toolkit"
version = "0.1.0"
edition = "2021"
description = "A comprehensive SSL/TLS certificate analysis toolkit"
authors = ["Russ McKendrick"]
license = "MIT"
repository = "https://github.com/russmckendrick/ssl-toolkit"
keywords = ["ssl", "tls", "certificate", "security", "dns"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Core TLS/Certificate handling
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
x509-parser = "0.16"
webpki-roots = "0.26"
pem = "3"
der-parser = "9"

# DNS resolution
hickory-resolver = "0.24"
hickory-client = "0.24"
hickory-proto = "0.24"

# HTTP client for OCSP, CT logs, AIA
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Internationalized domain names
idna = "1"

# CLI and terminal UI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
tabled = { version = "0.16", features = ["ansi"] }
textwrap = "0.16"

# Serialization and output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Additional utilities
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
url = "2"
ipnetwork = "0.20"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "ssl-toolkit"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
